task-3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager
  namespace: task-manager
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: task-manager
